Fixes menu on mobile

--- a/src/ej/static/ej/scss/_elements.scss
+++ b/src/ej/static/ej/scss/_elements.scss
@@ -360,7 +360,7 @@ legend {
 }
 
 .header-space {
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
 }
 
 .loader {
@@ -398,7 +398,7 @@ legend {
     }
 }
 
-@media (max-width: 320px) { 
+@media (max-width: 320px) {
     .terms {
         &__content {
             height: 15.4rem;
@@ -413,7 +413,7 @@ legend {
     .register-form {
         &-container {
             grid-template-columns: 7% 80% 7%;
-            
+
             &--first-column {
                 &--password {
                     input {margin: 0.375rem 0 1.5rem 0;}
@@ -422,10 +422,10 @@ legend {
 
             &--second-column {
                 grid-column: 2/3;
-                
+
                 &--email {
                     input {margin: 0.375rem 0 1.5rem 0;}
-                } 
+                }
             }
             &--full-width {
                 grid-column: 2/3;
@@ -530,7 +530,7 @@ legend {
     .register-form {
         &-container {
             grid-template-columns: 4% auto 4%;
-            
+
             &--first-column {
                 &--password {
                     input {margin: 0.375rem 0 1.5rem 0;}
@@ -539,10 +539,10 @@ legend {
 
             &--second-column {
                 grid-column: 2/3;
-                
+
                 &--email {
                     input {margin: 0.375rem 0 1.5rem 0;}
-                } 
+                }
             }
             &--full-width {
                 grid-column: 2/3;
